# actix

./: .env  Cargo.toml
migrations/: 20231121131317_add_user_table.sql
src/: main.rs
src/core/: mod.rs  telemetry.rs
src/core/postgres/: mod.rs  user_profile.rs
src/routes/: mod.rs  user_routes.rs
src/test/: lib.rs
