[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
uuid={version="1.6.1", features=["v4", "serde"]}
chrono={ version = "0.4.26",  features = ["serde"]}
anyhow = "1.0.75"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.30"
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2"



[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
    "migrate",
    "macros"
]


